# basic_knowledge_graph

./: README.md  basic_graph_rag.py  docker-compose.yaml  graph_rag.py  pyproject.toml  requirements.txt
agentic_graph_rag/: ch04.ipynb  ingest_movies_dataset.py
data/: durian_pest_and_disease_data.xlsx
docs/: ontology_schema.html
docs/data/: terminology.py
examples/: build_a_question_answering_application.ipynb  build_pest_and_disease_knowledge_graph.ipynb  construct_a_knowledge_graph.ipynb  disease_schema.py  enhancing_graph_neo4j.ipynb  graph_rag.py  graphrag_agent.ipynb  knowledge_graph.ipynb  lang_extract.ipynb  neo4j_hybridrag.ipynb  test_graph_neo4j.py
graphRAG/: construct_graph.py  cypher_queries.py  ms_graphrag.py
graph_rag/: construct_graph.py  ms_graphrag.py
ms_graph_rag/: cypher_queries.py  extract_json.py  movies_dataset.txt  ms_graph_rag.ipynb  parse_extraction_output.py  utils.py
ms_graph_rag/prompts/: community_report_prompt.py  get_prompt.py  graph_extraction_prompt.py  summarize_prompt.py
src/: construct.py  construct_kg.py  create_prompt.py  gradio_ui.py  retrieve.py  settings.py  utils.py
src/prompts/: disease_graph_schema_prompt.py  document_prompt.py  entity_and_relation_extraction_prompt.py  graph_schema_prompt.py  query_enhancement_prompt.py
src/schema/: disease_schema.py  visualize_schema.py
