[project]
name = "basic-knowledge-graph"
version = "0.1.0"
description = "A Basic Knowledge Graph Construction and Retrieval"
authors = [
  { name = "phungpx", email = "phamxuanphungbku@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

# Dependencies your project needs at runtime
dependencies = [
  "python-dotenv==1.0.0",
  "langchain-neo4j==0.5.0",
  "pandas==2.3.2",
  "langchain-experimental==0.3.4",
  "langchain-openai==0.3.31",
  "langchain-google-genai==2.1.10",
  "openpyxl==3.1.5",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.0"
]

[project.optional-dependencies]
dev = [
  "graphviz==0.2",
  "pyvis==0.3.2",
  "gradio==5.43.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
